--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,9 @@ jobs:
         new_tag="v$latest_major_version.$latest_minor_version"
           
         echo "::set-output name=new_tag::$new_tag"
+    - name: Get current branch
+      run: |
+          branch=$(git symbolic-ref --short HEAD)
     - name: Create tag
       run: |
         #repo_name=$(basename "${{ github.repository }}")
