--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,6 +39,10 @@ jobs:
       run: |
           branch=$(git symbolic-ref --short HEAD)
           echo "$branch"
+    - name: Fetch version from package.json
+      run: |
+          version=$(grep -m1 version package.json | awk -F: '{ print $2 }' | sed 's/[", ]//g')
+          echo "$version"
     - name: Create tag
       run: |
         #repo_name=$(basename "${{ github.repository }}")
