--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Fetch version from package.json
       run: |
           version=$(grep -m1 version package.json | awk -F: '{ print $2 }' | sed 's/[", ]//g')
-          echo "$version"
+          echo "$version" #
     - name: Create tag
       run: |
         #repo_name=$(basename "${{ github.repository }}")
