--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
+    "version": "1.2.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
