--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "my-app",
-  "version": "0.0.0",
+  "version": "1.3.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "version": "1.2.3"
+    "test": "ng test"
+    
   },
   "private": true,
   "dependencies": {
@@ -21,8 +21,8 @@
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "version": "1.2.3"
+    "zone.js": "~0.11.4"
+    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
@@ -35,7 +35,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2",
-    "version": "1.2.3"
+    "typescript": "~4.7.2"
+    
   }
 }
