--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,7 +45,7 @@ jobs:
           echo "$version" 
     - name: Create and push tag
       run: |
-          tag="$branch-REPUI-BLD${{ github.run_number }}-$version"
+          tag="$branch""-REPUI-BLD${{ github.run_number }}-$version"
           git tag $tag
           git push origin $tag
     - name: Create tag
