--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,9 +45,9 @@ jobs:
           echo "$version" 
     - name: Create and push tag
       run: |
-          tags="$branch_REPUI_BLD${{ github.run_number }}_$version"
+          tags="$branch_REPUI_BLD.${{ github.run_number }}._$version"
           echo "$tags"
-          git tag -a -m "Tag created by GitHub Actions" "$tags"
+          git tag -a -m "Tag created by GitHub" "$tags"
           git push origin "$tags"
     - name: Create tag
       run: |
