--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,7 +45,7 @@ jobs:
           echo "$version" 
     - name: Create and push tag
       run: |
-          tags="$branch_REPUI_BLD.${{ github.run_number }}._$version"
+          tags="$branch_REPUI_BLD.${{ github.run_number }}.$version"
           echo "$tags"
           git tag -a -m "Tag created by GitHub" "$tags"
           git push origin "$tags"
