--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,13 +46,14 @@ jobs:
     - name: Create and push tag
       run: |
           version=$(grep -m1 version package.json | awk -F: '{ print $2 }' | sed 's/[", ]//g')
+          version1=$(echo "$version" | tr -d '?')
           echo "$version" 
           #tagss="$branch_REPUI_BLD${{ github.run_number }}$version"
           Branch=$(basename "${{ github.ref }}")
-          tagss=${Branch}_REPUI_BLD.${{ github.run_number }}-${version}
+          tagss=${Branch}_REPUI_BLD.${{ github.run_number }}-${version1}
           #tagss="${Branch}.${{ github.run_number }}"
           tagss=$(echo "$tagss" | tr -d '?') 
-          echo "$tagss"
+          #echo "$tagss"
           git tag -a -m "Tag created by GitHub" "$tagss"
           git push origin "$tagss"
     - name: Create tag
