--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -47,7 +47,7 @@ jobs:
       run: |
           version=$(grep -m1 version package.json | awk -F: '{ print $2 }' | sed 's/[", ]//g')
           version1=$(echo "$version" | tr -d '?')
-          echo "$version" 
+          echo "$version1" 
           #tagss="$branch_REPUI_BLD${{ github.run_number }}$version"
           Branch=$(basename "${{ github.ref }}")
           tagss=${Branch}_REPUI_BLD.${{ github.run_number }}-${version1}
