--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,7 +48,8 @@ jobs:
           version=$(grep -m1 version package.json | awk -F: '{ print $2 }' | sed 's/[", ]//g')
           #tagss="$branch_REPUI_BLD${{ github.run_number }}$version"
           Branch=$(basename "${{ github.ref }}")
-          tagss=${Branch}_REPUI_BLD.${{ github.run_number }}${version}
+          tagss=${Branch}_REPUI_BLD.${{ github.run_number }}-${version}
+          tagss=$(echo "$tagss" | sed 's/[^A-Za-z0-9_.-]//g')
           #tagss="${Branch}.${{ github.run_number }}"
           tagss=$(echo "$tagss" | tr -d '?') 
           #echo "$tagss"
