--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,7 +50,7 @@ jobs:
           Branch=$(basename "${{ github.ref }}")
           tagss=${Branch}_REPUI_BLD.${{ github.run_number }}-${version}
           tagss=$(echo "$tagss" | sed 's/[^A-Za-z0-9_.-]//g')
-          #tagss="${Branch}.${{ github.run_number }}"
+          #tagss="${Branch}.${{ github.run_number }}"  #
           tagss=$(echo "$tagss" | tr -d '?') 
           #echo "$tagss"
           git tag -a -m "Tag created by GitHub" "$tagss"
