--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,10 +35,8 @@ jobs:
         new_tag="v$latest_major_version.$latest_minor_version"
           
         echo "::set-output name=new_tag::$new_tag"
-    - name: Get current branch
-      run: |
-          branch=$(git symbolic-ref --short HEAD)
-          echo "$branch"
+    - name: Create DEVbuild directory
+      run: mkdir ${{ env.bamboo_DEVbuild }}
     - name: Fetch version from package.json
       run: |
           version=$(grep -m1 version package.json | awk -F: '{ print $2 }' | sed 's/[", ]//g')
