--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -89,6 +89,10 @@ jobs:
       run: |
         echo "Build Artifacts: DEVbuild.tar"
         ls ${{ steps.view.outputs.artifact_folder }}
+        echo "****BUILD****
+        ls /home/runner/work/Gradle-start-project/Gradle-start-project/build
+        echo "****DEVbuild****
+        ls /home/runner/work/Gradle-start-project/Gradle-start-project/DEVbuild
      
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v2
