--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -90,9 +90,9 @@ jobs:
         echo "Build Artifacts: DEVbuild.tar"
         ls ${{ steps.view.outputs.DEVbuild }}
         echo "****BUILD****
-        ls /home/runner/work/Gradle-start-project/Gradle-start-project/DEVbuild
-        echo "****DEVbuild****
-        ls /home/runner/work/Gradle-start-project/Gradle-start-project/DEVbuild
+        ls /home/runner/work/Gradle-start-project/Gradle-start-project/build
+        #echo "****DEVbuild****
+        #ls /home/runner/work/Gradle-start-project/Gradle-start-project/DEVbuild
      
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v2
