--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -79,6 +79,8 @@ jobs:
          mkdir DEVebuild
          cp -r build/* DEVebuild
          cd DEVebuild
+         files=$(find . -maxdepth 1 ! -type d | grep 'index.*\.html' | grep -v '~dev\.html')
+         rm -f $files
          tar cf ../DEVebuild.tar .
     - name: Upload DEVebuild.tar artifact
       uses: actions/upload-artifact@v2
