--- a/build.gradle
+++ b/build.gradle
@@ -23,36 +23,15 @@ ext {
     arcgisVersion = '200.1.0'
 }
 
-// repositories {
-//     mavenCentral()
-//     maven {
-//         url 'https://esri.jfrog.io/artifactory/arcgis'
-//     }
-// }
-
 repositories {
-    mavenLocal()
-	mavenCentral()
+    mavenCentral()
     maven {
-          url "http://rhecombldapp01.sterling.com:18080/repository/internal"
-          credentials {
-            username = properties['repo.USERNAME']
-            password = properties['repo.USERNAME']
+        url 'https://esri.jfrog.io/artifactory/arcgis'
+        credentials {
+            username = '#{username}#'
+            password = '#{password}#'
         }
     }
-	maven {
-		url "http://rhecombldapp01.sterling.com:18080/repository/snapshots"
-        credentials {
-            username = properties['repo.USERNAME']
-            password = properties['repo.USERNAME']
-        }
-	}  
-    /* Changed by PB 
-     * Date - May 3rd, 2021
-     * Comment - No longer available, uploaded the artifacts to internal snapshot repo
-     * maven {
-        //url "http://dl.bintray.com/msopentech/Maven"
-    }*/
 }
 
 configurations {
