--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
           version=$(grep -m1 version package.json | awk -F: '{ print $2 }' | sed 's/[", ]//g')
           echo "$version" 
     - name: replace-token
-      uses: cschleiden/replace-tokens@v1.2
+      uses: replace-tokens@8e091844c27eb36853efbfade5ffca07260f0250
       with:
          tokenPrefix: '#{'
          tokenSuffix: '}#'
