--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,8 +38,8 @@ jobs:
           # You can use the replaced credentials here to perform any necessary actions
           echo "Username: ${{ secrets.USERNAME }}"
           echo "Password: ${{ secrets.PASSWORD }}"
-          echo " content is file"
-          cat /home/runner/work/Gradle-start-project/Gradle-start-project/file.txt
+          echo " content in Gradle"
+          cat /home/runner/work/Gradle-start-project/Gradle-start-project/build.gradle
 
     - name: Display File Content
       run: cat /home/runner/work/Gradle-start-project/Gradle-start-project/file.txt
