--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,10 @@ repositories {
     mavenCentral()
     maven {
         url 'https://esri.jfrog.io/artifactory/arcgis'
-        
+        credentials {
+            username: {{USERNAME}}
+            password: {{PASSWORD}}
+        }   
     }
 }
 
