--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ repositories {
     maven {
         url 'https://esri.jfrog.io/artifactory/arcgis'
         credentials {
-            username: {{USERNAME}}
-            password: {{PASSWORD}}
+            username: '{{USERNAME}}'
+            password: '{{PASSWORD}}'
         }   
     }
 }
